# cargowise_scrapping

./: .gitignore  main.py  pyproject.toml  scrape_video.ipynb
