[tool.poetry]
name = "dhl"
version = "0.1.0"
description = ""
authors = ["renjithvsampcome <renjith.vs@ampcome.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.49.0"
browser-cookie3 = "^0.19.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
